--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation 'org.devio.takephoto:takephoto_library:4.1.0'
     implementation 'com.contrarywind:Android-PickerView:4.1.9'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
